--- a/week3/products.html
+++ b/week3/products.html
@@ -46,7 +46,11 @@
             </tr>
           </thead>
           <tbody>
-            <tr v-for="product in products" :key="product.id">
+            <tr
+              v-for="product in products"
+              :key="product.id"
+              :class="[product.is_enabled ? 'table-primary' : 'table-secondary']"
+            >
               <td>{{ product.category }}</td>
               <td>{{ product.title }}</td>
               <td class="text-end">{{ product.origin_price }}</td>
