--- a/week5/index.html
+++ b/week5/index.html
@@ -98,7 +98,7 @@
             <button
               class="btn btn-outline-danger"
               type="button"
-              :disabled="loadingItems.includes('cleanCart') || !cart.carts?.length"
+              :disabled="disableBtn"
               @click="cleanCart"
             >
               清空購物車
@@ -178,116 +178,128 @@
               </tr>
             </tfoot>
           </table>
+          <!-- 購物車列表 -->
         </div>
         <div class="my-5 row justify-content-center">
-          <v-form
-            ref="form"
-            class="col-md-6"
-            v-slot="{ errors }"
-            @submit="onFormSubmit"
-          >
-            <!-- <code> {{ errors }} </code> -->
-            <div class="mb-3">
-              <label for="email" class="form-label">Email</label>
-              <v-field
-                id="email"
-                name="email"
-                type="email"
-                class="form-control"
-                :class="{ 'is-invalid': errors['email'] }"
-                placeholder="請輸入 Email"
-                rules="email|required"
-                v-model="form.user.email"
-              ></v-field>
-              <error-message
-                name="email"
-                class="invalid-feedback"
-              ></error-message>
-            </div>
-
-            <div class="mb-3">
-              <label for="name" class="form-label">收件人姓名</label>
-              <v-field
-                id="name"
-                name="姓名"
-                type="text"
-                class="form-control"
-                :class="{ 'is-invalid': errors['姓名'] }"
-                placeholder="請輸入姓名"
-                rules="required|min:2|max:10"
-                v-model="form.user.name"
-              ></v-field>
-              <error-message
-                name="姓名"
-                class="invalid-feedback"
-              ></error-message>
-            </div>
-
-            <div class="mb-3">
-              <label for="tel" class="form-label">收件人電話</label>
-              <v-field
-                id="tel"
-                name="電話"
-                type="text"
-                class="form-control"
-                :class="{ 'is-invalid': errors['電話'] }"
-                placeholder="請輸入電話"
-                :rules="isPhone"
-                v-model="form.user.tel"
-              ></v-field>
-              <error-message
-                name="電話"
-                class="invalid-feedback"
-              ></error-message>
-            </div>
-
-            <div class="mb-3">
-              <label for="address" class="form-label">收件人地址</label>
-              <v-field
-                id="address"
-                name="地址"
-                type="text"
-                class="form-control"
-                :class="{ 'is-invalid': errors['地址'] }"
-                placeholder="請輸入地址"
-                rules="required"
-                v-model="form.user.address"
-              ></v-field>
-              <error-message
-                name="地址"
-                class="invalid-feedback"
-              ></error-message>
-            </div>
-
-            <div class="mb-3">
-              <label for="message" class="form-label">留言</label>
-              <v-field
-                as="textarea"
-                id="message"
-                name="message"
-                class="form-control"
-                cols="30"
-                rows="10"
-                v-model="form.message"
-              ></v-field>
-            </div>
-            <div class="text-end">
-              <button
-                type="submit"
-                class="btn btn-danger"
-                :disabled="loadingItems.includes('createOrder') || !cart.carts?.length"
-              >
-                <i
-                  class="fas fa-spinner fa-pulse"
-                  v-if="loadingItems.includes('createOrder')"
-                ></i>
-                {{ !cart.carts?.length ? '請先購物' : '送出訂單' }}
-              </button>
-            </div>
-          </v-form>
+          <!-- 結帳 Form -->
+          <form-component
+            :cart="cart"
+            :disable-btn="disableBtn"
+            :loading-items="loadingItems"
+            @submit-form="onFormSubmit"
+          ></form-component>
+          <!-- 結帳 Form -->
         </div>
       </div>
     </div>
+
+    <script type="text/x-template" id="formComponent">
+        <v-form
+        ref="form"
+        class="col-md-6"
+        v-slot="{ errors }"
+        @submit="onFormSubmit"
+      >
+        <!-- <code> {{ errors }} </code> -->
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <v-field
+            id="email"
+            name="email"
+            type="email"
+            class="form-control"
+            :class="{ 'is-invalid': errors['email'] }"
+            placeholder="請輸入 Email"
+            rules="email|required"
+            v-model="form.user.email"
+          ></v-field>
+          <error-message
+            name="email"
+            class="invalid-feedback"
+          ></error-message>
+        </div>
+
+        <div class="mb-3">
+          <label for="name" class="form-label">收件人姓名</label>
+          <v-field
+            id="name"
+            name="姓名"
+            type="text"
+            class="form-control"
+            :class="{ 'is-invalid': errors['姓名'] }"
+            placeholder="請輸入姓名"
+            rules="required|min:2|max:10"
+            v-model="form.user.name"
+          ></v-field>
+          <error-message
+            name="姓名"
+            class="invalid-feedback"
+          ></error-message>
+        </div>
+
+        <div class="mb-3">
+          <label for="tel" class="form-label">收件人電話</label>
+          <v-field
+            id="tel"
+            name="電話"
+            type="text"
+            class="form-control"
+            :class="{ 'is-invalid': errors['電話'] }"
+            placeholder="請輸入電話"
+            :rules="isPhone"
+            v-model="form.user.tel"
+          ></v-field>
+          <error-message
+            name="電話"
+            class="invalid-feedback"
+          ></error-message>
+        </div>
+
+        <div class="mb-3">
+          <label for="address" class="form-label">收件人地址</label>
+          <v-field
+            id="address"
+            name="地址"
+            type="text"
+            class="form-control"
+            :class="{ 'is-invalid': errors['地址'] }"
+            placeholder="請輸入地址"
+            rules="required"
+            v-model="form.user.address"
+          ></v-field>
+          <error-message
+            name="地址"
+            class="invalid-feedback"
+          ></error-message>
+        </div>
+
+        <div class="mb-3">
+          <label for="message" class="form-label">留言</label>
+          <v-field
+            as="textarea"
+            id="message"
+            name="message"
+            class="form-control"
+            cols="30"
+            rows="10"
+            v-model="form.message"
+          ></v-field>
+        </div>
+        <div class="text-end">
+          <button
+            type="submit"
+            class="btn btn-danger"
+            :disabled="disableBtn"
+          >
+            <i
+              class="fas fa-spinner fa-pulse"
+              v-if="loadingItems.includes('createOrder')"
+            ></i>
+            {{ !cart.carts?.length ? '請先購物' : '送出訂單' }}
+          </button>
+        </div>
+      </v-form>
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script
